Refactoring code, add FileChannel in BruteForce